tests/should_fail/logic_alias/alias_defined_in_different_impls2.stderr
error: Cannot use #[logic_alias] in this context, because program function is bound to type S2 and logic function is bound to type S1
  --> alias_defined_in_different_impls2.rs:18:5
   |
18 |     #[logic_alias(S1::is_zero_logic(v))]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: function defined here
  --> alias_defined_in_different_impls2.rs:19:5
   |
19 |     fn is_zero_prog(v: i64) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: logic function defined here
  --> alias_defined_in_different_impls2.rs:12:5
   |
12 |     fn is_zero_logic(v: i64) -> bool {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `logic_alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

